added custom fonts

--- a/css/settings/typography.css
+++ b/css/settings/typography.css
@@ -3,5 +3,5 @@
 ================================== */
 
 :root {
-  --fontstack-main: system-ui, sans-serif;
+  --fontstack-main: "Satoshi", system-ui, sans-serif;
 }
